syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/flogram-lab/wayout/flo_tg/proto";

// TODO: telegram message attachments
// todo forward tracking deep_from_id/source_uid/title/etc?

enum FLAGS {
   Invalid = 0;
   V1 = 1;
   Tg = 2;
   User = 4;
   Group = 8;
   Channel = 16;

   // ForwardFromSource = 32;
   // TgUsername = 64;
   // TgMediaDownloadLinks = 128;
}

message FLO_SOURCE {
   int32 flags = 1;

   string source_uid = 2;
   string title = 3;
}

message FLO_MESSAGE {
   int32 flags = 1;

   string source_uid = 2;
   string title = 3;

   string message_uid = 5;
   google.protobuf.Timestamp created_at = 6;
   string text = 7;
   
   repeated string message_links = 8;

   //optional FLO_SOURCE ForwardFromSource = 9;
}

// ------------------------------------------------------------------------------------------------------
// flo_tg

service FlotgService {
   rpc Ready(google.protobuf.Empty) returns (google.protobuf.Empty);
   rpc GetSources(FlotgGetSourcesRequest) returns (stream FLO_SOURCE);
   rpc GetMessages(FlotgGetMessagesRequest) returns (stream FLO_MESSAGE);
}

message FlotgGetMessagesRequest {
   int32 flags = 1;

   repeated string source_uids = 2;

   //optional google.protobuf.Timestamp messages_since = 3;
   //optional google.protobuf.Timestamp messages_before = 4;
   repeated int32 filter_flags = 5;
}

message FlotgGetSourcesRequest {
   int32 flags = 1;

   repeated int32 filter_flags = 2;
}

// ------------------------------------------------------------------------------------------------------
// flo_rss

service FloRssService {
   rpc GetFeeds(google.protobuf.Empty) returns (stream FloRssFeed);
   rpc CreateFeed(FloRssCreateRequest) returns (FloRssFeed);
   rpc DeleteFeed(FloRssFeed) returns (google.protobuf.Empty);
   rpc GetMessages(FloRssFeed) returns (stream FLO_MESSAGE);
}

message FloRssFeed {
   int32 flags = 1;

   string source_uid = 2;
   string title = 3;
   string rss_uri = 4;
}

message FloRssCreateRequest {
   int32 flags = 1;

   string source_uid = 2;
}